--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.17.2",
     "tailwindcss": "^4.0.8"
   },
   "devDependencies": {
